...
            title: "Live",
          }}
        />
        <Tabs.Screen
          name="radio"
          options={{
            title: "Archive",
          }}
        />
        <Tabs.Screen
          name="playlist"
          options={{
            title: "Playlists",
          }}
        />

        <Tabs.Screen
          name="search"
          options={{
            title: "Search",
            href: "/search",
          }}
        />
        <Tabs.Screen
          name="account"
          options={{
...
