...
              <View style={styles.liveNowContainer}>
                <View style={{ backgroundColor: textColor, padding: 4 }}>
                  <ThemedText
                    type="subtitle"
                    style={{ color: backgroundColor }}
                  >
                    {isBothChannelsLive ? "Live on 1" : "Live now"}
                  </ThemedText>
                </View>
                <Pressable
                  onPress={() =>
                    router.push(`/live/show/${liveNow.slug}` as any)
                  }
...
